# FPGRARS

./: Cargo.toml  index.html  main.js  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
src/: main.rs
src/gui/: mod.rs
