[package]
name = "fpgrars"
version = "0.1.0"
authors = ["Leonardo Riether <leonardoalves8217@gmail.com>", "Mikael Mello <git@mikaelmello.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fpgrars"
crate-type = ["cdylib"]

[features]
show_ms = [] # show ms per frame in the window title

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
lazy_static = "1.4.0"
rand = "0.7.3"

pixel-canvas = "0.2.1"
glium = "0.26.0"

nom = "5.1.2"

radix_trie = "0.0.9"
fnv = "1.0.7"

byteorder = "1.3.4"